--- a/Source/RGTabBarController.xib
+++ b/Source/RGTabBarController.xib
@@ -5,12 +5,13 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11542"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RGTabBarController" customModule="RGTabBarController" customModuleProvider="target">
             <connections>
+                <outlet property="contentContainerView" destination="FZ8-Hf-1Hj" id="iyl-Iu-sWt"/>
                 <outlet property="view" destination="kyv-4g-QMy" id="uLs-06-WMq"/>
             </connections>
         </placeholder>
@@ -18,7 +19,29 @@
         <view contentMode="scaleToFill" id="kyv-4g-QMy">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MkS-Du-LVH" userLabel="Top View">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                    <color key="backgroundColor" red="0.29411764709999999" green="0.82745098039999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="X3Q-py-IeY"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-Hf-1Hj" userLabel="Content View" customClass="ContainerView" customModule="RGToolKit">
+                    <rect key="frame" x="0.0" y="128" width="375" height="539"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="FZ8-Hf-1Hj" secondAttribute="bottom" id="E3B-PY-l7u"/>
+                <constraint firstItem="FZ8-Hf-1Hj" firstAttribute="leading" secondItem="kyv-4g-QMy" secondAttribute="leading" id="L04-Mu-aF5"/>
+                <constraint firstAttribute="trailing" secondItem="MkS-Du-LVH" secondAttribute="trailing" id="O93-3F-2pI"/>
+                <constraint firstAttribute="trailing" secondItem="FZ8-Hf-1Hj" secondAttribute="trailing" id="W2k-7J-EG6"/>
+                <constraint firstItem="MkS-Du-LVH" firstAttribute="top" secondItem="kyv-4g-QMy" secondAttribute="top" id="lU9-s1-QsL"/>
+                <constraint firstItem="FZ8-Hf-1Hj" firstAttribute="top" secondItem="MkS-Du-LVH" secondAttribute="bottom" id="pMc-RS-xIG"/>
+                <constraint firstItem="MkS-Du-LVH" firstAttribute="leading" secondItem="kyv-4g-QMy" secondAttribute="leading" id="pV6-TB-A1N"/>
+            </constraints>
             <point key="canvasLocation" x="7" y="-20"/>
         </view>
     </objects>
