--- a/RGTabBarController/TestViewController.xib
+++ b/RGTabBarController/TestViewController.xib
@@ -27,7 +27,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="May-rO-htI" secondAttribute="bottom" constant="128" id="MZR-zx-84E"/>
                 <constraint firstItem="May-rO-htI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ocB-CK-AZP"/>
