--- a/Source/RGTabBarController.xib
+++ b/Source/RGTabBarController.xib
@@ -5,13 +5,16 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RGTabBarController" customModule="RGTabBarController" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="Q94-dm-Qth" id="9fn-Vg-SeG"/>
                 <outlet property="contentContainerView" destination="FZ8-Hf-1Hj" id="iyl-Iu-sWt"/>
+                <outlet property="sliderLeftConstraint" destination="TaU-HZ-41T" id="JPn-Yi-hc9"/>
+                <outlet property="sliderWidthConstraint" destination="cC7-yY-TP8" id="BLh-1T-veA"/>
                 <outlet property="view" destination="kyv-4g-QMy" id="uLs-06-WMq"/>
             </connections>
         </placeholder>
@@ -22,14 +25,62 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MkS-Du-LVH" userLabel="Top View">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                    <color key="backgroundColor" red="0.29411764709999999" green="0.82745098039999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h4N-b4-sUi" userLabel="Navbar">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="64" id="xET-Ax-Oxa"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ugy-FT-EVx" userLabel="Tabbar">
+                            <rect key="frame" x="0.0" y="64" width="375" height="64"/>
+                            <subviews>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Q94-dm-Qth">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="rmD-6y-g48">
+                                        <size key="itemSize" width="50" height="50"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
+                            </subviews>
+                            <color key="backgroundColor" red="0.29411764709999999" green="0.82745098039999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="Q94-dm-Qth" secondAttribute="bottom" id="Pc2-g2-1nP"/>
+                                <constraint firstAttribute="trailing" secondItem="Q94-dm-Qth" secondAttribute="trailing" id="ZoG-Sy-jA9"/>
+                                <constraint firstItem="Q94-dm-Qth" firstAttribute="top" secondItem="Ugy-FT-EVx" secondAttribute="top" id="dAk-QT-SHC"/>
+                                <constraint firstItem="Q94-dm-Qth" firstAttribute="leading" secondItem="Ugy-FT-EVx" secondAttribute="leading" id="hfD-E3-E4b"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32g-77-oxe" userLabel="Slider">
+                            <rect key="frame" x="0.0" y="126" width="128" height="2"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="2" id="ODA-F6-DbY"/>
+                                <constraint firstAttribute="width" constant="128" id="cC7-yY-TP8"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="32g-77-oxe" secondAttribute="bottom" id="5W7-sS-PBS"/>
+                        <constraint firstItem="h4N-b4-sUi" firstAttribute="top" secondItem="MkS-Du-LVH" secondAttribute="top" id="6gu-Ok-7hm"/>
+                        <constraint firstAttribute="bottom" secondItem="Ugy-FT-EVx" secondAttribute="bottom" id="AoI-9r-UMv"/>
+                        <constraint firstAttribute="trailing" secondItem="Ugy-FT-EVx" secondAttribute="trailing" id="J7j-aE-VMS"/>
+                        <constraint firstItem="Ugy-FT-EVx" firstAttribute="top" secondItem="h4N-b4-sUi" secondAttribute="bottom" id="Jsb-hz-qJH"/>
+                        <constraint firstItem="h4N-b4-sUi" firstAttribute="leading" secondItem="MkS-Du-LVH" secondAttribute="leading" id="O9A-Gt-tfn"/>
+                        <constraint firstItem="32g-77-oxe" firstAttribute="leading" secondItem="MkS-Du-LVH" secondAttribute="leading" id="TaU-HZ-41T"/>
                         <constraint firstAttribute="height" constant="128" id="X3Q-py-IeY"/>
+                        <constraint firstItem="Ugy-FT-EVx" firstAttribute="leading" secondItem="MkS-Du-LVH" secondAttribute="leading" id="caN-Te-JaF"/>
+                        <constraint firstAttribute="trailing" secondItem="h4N-b4-sUi" secondAttribute="trailing" id="f9N-Ko-POu"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-Hf-1Hj" userLabel="Content View" customClass="ContainerView" customModule="RGToolKit">
                     <rect key="frame" x="0.0" y="128" width="375" height="539"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -42,7 +93,7 @@
                 <constraint firstItem="FZ8-Hf-1Hj" firstAttribute="top" secondItem="MkS-Du-LVH" secondAttribute="bottom" id="pMc-RS-xIG"/>
                 <constraint firstItem="MkS-Du-LVH" firstAttribute="leading" secondItem="kyv-4g-QMy" secondAttribute="leading" id="pV6-TB-A1N"/>
             </constraints>
-            <point key="canvasLocation" x="7" y="-20"/>
+            <point key="canvasLocation" x="-2.5" y="-22.5"/>
         </view>
     </objects>
 </document>
